[project]
name = "nyan-cat"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4==4.14.3",
    "celery>=5.6.0",
    "deepl==1.27.0",
    "docker==7.1.0",
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "html2text>=2025.4.15",
    "python-levenshtein==0.27.3",
    "opencv-python==4.12.0.88",
    "opencv-python-headless==4.12.0.88",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "psutil==7.2.1",
    "python-docx==1.2.0",
    "pyuseragents==1.0.5",
    "redis>=7.1.0",
    "safeio==1.2",
    "transformers==4.57.3",
    "pyopenssl==25.3.0",
    "torch==2.9.1",
]
